# mlir-plugins

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.serena/: project.yml
flat-closure-lowering/: CMakeLists.txt  FlatClosureLowering.cpp  Passes.td  README.md
flat-closure-lowering/test/: capture_memref.mlir  closure_pair.mlir  multi_capture.mlir  passthrough.mlir  run_tests.sh
reconcile-ffi-externs/: CMakeLists.txt  Passes.td  README.md  ReconcileFFIExterns.cpp
reconcile-ffi-externs/test/: free_collision.mlir  malloc_collision.mlir  run_tests.sh  simple_rename.mlir
